# nexus-shs

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  railway.json
.claude/commands/: onboard.md
docs/: DEPLOYMENT.md  SEEDING.md  WORKFLOWS.md
docs/connectors/: README.md  goto-connect.md  welcomehome.md
docs/onboarding/: PROFILE.md
nexus/: __init__.py  app.py  config.py  middleware.py  writes.py
nexus/agents/: __init__.py  context.py  loop.py  notify.py  reactive.py  scheduled.py  toolset.py
nexus/connectors/: __init__.py
nexus/connectors/example/: __init__.py  client.py  sync.py  webhook.py
nexus/connectors/goto_connect/: __init__.py  client.py  events.py  stream.py  sync.py  webhook.py
nexus/connectors/ingress/: __init__.py  envelope.py  jobs.py  router.py  routes.py  rules.py  security.py
nexus/connectors/welcomehome/: __init__.py  client.py  sync.py
nexus/ingest/: __init__.py  batch.py  classify.py  extract.py  pipeline.py
nexus/tools/: __init__.py  connectors.py  knowledge_base.py  vault.py  workflows.py
nexus/vault/: __init__.py  embeddings.py  events.py  index.py  io.py  queries.py  schema.py  search.py
nexus/workflows/: __init__.py  blocks.py  builder.py  engine.py  render.py  schema.py  store.py  triggers.py
scripts/: README.md  goto_oauth.py  goto_ws_recon.py
tests/: test_acceptance.py  test_goto_connect.py  test_indexing.py  test_normalization.py  test_welcomehome.py  test_workflows.py
vault/: INDEX.md  README.md
vault/context/: ORG.md  SOUL.md  USER.md
vault/reference/: INDEX.md  seniors-helping-seniors-in-home-care-services-faq.md  seniors-helping-seniors-in-home-care-services-for-alzheimers-and-dementia.md  seniors-helping-seniors-in-home-care-services-overview.md
