[project]
name = "nexus"
version = "0.1.0"
description = "Nexus — a forkable system of intelligence (schema-enforced vault + connectors + ingress + ambient agents)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastmcp>=3.4.3",
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "sqlite-vec>=0.1.6",
    "pdfminer.six>=20240706",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
